--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -169,7 +169,7 @@
     <string name="account_create_successful">创建账户成功！</string>
     <string name="could_not_upload_image">上传图片失败</string>
     <string name="email_already_registered">电邮已注册</string>
-    <string name="image_clicked">已点击图片</string>
+    <string name="image_clicked">请选择一张照片来更改个人资料照片</string>
     <string name="invalid_phone_format">手机号码格式错误 +60XXXXXXXXX</string>
     <string name="logout_successful">登出成功！</string>
     <string name="no_image_selected">没有图片被选取</string>
@@ -181,4 +181,5 @@
     <string name="your_name">您的名字</string>
     <string name="your_phone_number">您的手机号码</string>
     <string name="remove_from_wishlist_successful">成功从心愿单移除！</string>
+    <string name="updating_profile_picture">更新个人资料图片</string>
 </resources>
